--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                I'm currently a visiting student at John Hopkins University <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
+                I'm currently a visiting student at Johns Hopkins University <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
                 I've interned at <a target="_blank" href="http://www.faceplusplus.com/">Megvii(Face++)</a> supervised by Xiangyu Zhang and <a target="_blank" href="http://jiansun.org/">Jian Sun</a> 
                 , and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a> supervised by Debing Zhang. I studied at <a target="_blank"
                                                                            href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
