--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img class="media-object" src="assets_files/me.png" width="96px" style="margin: 0px 10px">
             </a>
             <p>
-                I'm a Computer Science 3rd-year undergrad from <a
+                I'm a Computer Science final year undergrad from <a
                     href="https://en.wikipedia.org/wiki/Xi%27an_Jiaotong_University">Xi'an Jiaotong University</a>, with
                 my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
