--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                      </strong><br>
                         <strong>Yihui He</strong>, Xiangyu Zhang, Jian Sun, <i>ICCV 2017</i>
                         <a target="_blank"
-                           href="https://arxiv.org/abs/1707.06168">[arXiv]</a>              
+                           href="https://arxiv.org/abs/1707.06168">[arXiv]</a>  
+                        <a target="_blank"
+                           href="https://raw.githubusercontent.com/yihui-he/images/master/38722_He_0600.png">[Poster]</a>                                
                         <a target="_blank"
                            href="https://github.com/yihui-he/channel-pruning">[Code]</a>                             
                     </p>
