--- a/index.html
+++ b/index.html
@@ -101,18 +101,19 @@
             </a>
             <p>
                 I'm a Computer Science final year undergrad from <a
-                    href="https://en.wikipedia.org/wiki/Xi%27an_Jiaotong_University">Xi'an Jiaotong University</a>, with
+                    href="https://en.wikipedia.org/wiki/Xi%27an_Jiaotong_University">Xi'an Jiaotong Univ.</a>, with
                 my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                I'm currently a visiting student at Johns Hopkins University <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
+                Currently, I'm a visiting student at Johns Hopkins Univ. <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
                 I've interned at <a target="_blank" href="http://www.faceplusplus.com/">Megvii(Face++)</a> supervised by Xiangyu Zhang and <a target="_blank" href="http://jiansun.org/">Jian Sun</a> 
-                , and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a> supervised by Debing Zhang. I studied at <a target="_blank"
-                                                                           href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
+                , and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a>. I studied at <a target="_blank"
+                                  href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
                 grad school as an exchange student.</p>
+        <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing).</p>
             <p>Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>.
-                I have strong interest in research, planning to pursue a Ph.D.
+                I have strong interest in research, <strong>currently applying for Ph.D.</strong>
             </p>
 
 
