--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <strong>
                             Single Image Super-resolution with a Parameter Economic Residual-like Convolutional Neural Network
                         </strong><br>
-                        Yudong Liang, Ze Yang, Kai Zhang, <strong>Yihui He</strong>, Jinjun Wang, Nanning Zheng
+                        Yudong Liang, Ze Yang, Kai Zhang, <strong>Yihui He</strong>, Jinjun Wang, Nanning Zheng, <i>TMM in submission</i>
                         <a target="_blank"
                            href="https://arxiv.org/abs/1703.08173">[arXiv]</a>
                     </p>
