--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 , and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a>. I studied at <a target="_blank"
                                   href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
                 grad school as an exchange student.</p>
-        <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing).</p>
+        <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
             <p>Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>.
                 I have strong interest in research, <strong>currently applying for Ph.D.</strong>
@@ -157,7 +157,9 @@
                      </strong><br>
                         <strong>Yihui He</strong>, Xiangyu Zhang, Jian Sun, <i>ICCV 2017</i>
                         <a target="_blank"
-                           href="https://arxiv.org/abs/1707.06168">[arXiv]</a>  
+                           href="http://openaccess.thecvf.com/content_iccv_2017/html/He_Channel_Pruning_for_ICCV_2017_paper.html">[PDF]</a>  
+                        <a target="_blank"
+                           href="https://arxiv.org/abs/1707.06168">[arXiv]</a>                          
                         <a target="_blank"
                            href="https://raw.githubusercontent.com/yihui-he/images/master/38722_He_0600.png">[Poster]</a>     
                         <a target="_blank"
