--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="text-center hidden-phone">
             <img src="assets_files/me.png" alt="photo" class="logo-image">
             <br><br>
-            yihuihe AT foxmail.com <br>
+            yihuihe.yh AT gmail.com <br>
             <img src="./assets_files/GitHub-Mark.png" class="icon-adjust"> <a target="_blank"
                                                                               href="http://www.github.com/yihui-he">Github</a>
             <img src="./assets_files/linkedin.png" class="icon-adjust"> <a target="_blank"
@@ -89,7 +89,7 @@
                 Yihui He (何宜晖)
             </h3>
             <h5>
-                yihuihe AT foxmail.com</a>
+                yihuihe.yh AT gmail.com</a>
             </h5>
             <!-- Do I want to show a pic on the phone screen?
             <div class="text-center visible-phone">
