--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
                                   href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
                 grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
-            <p>Here's my <a target="_blank"
+                <p><strong>currently applying for Ph.D. Also looking for labs to join as visiting scholar in Summer 2018. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>.
-                I have strong interest in research, <strong>currently applying for Ph.D.</strong>
             </p>
 
 
