--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                 my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                Currently, I'm a visiting student at Johns Hopkins Univ. <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
+                Currently, I'm a visiting student at Johns Hopkins Univ. <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a> and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
                 I've interned at <a target="_blank" href="http://www.faceplusplus.com/">Megvii(Face++)</a> supervised by Xiangyu Zhang and <a target="_blank" href="http://jiansun.org/">Jian Sun</a> 
                 , and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a>. I studied at <a target="_blank"
                                   href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
                 grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
-                <p><strong>currently applying for Ph.D. Also looking for labs to join as visiting scholar in Summer 2018. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
+                <p><strong>currently applying for Ph.D. Also looking for one-year research assistant position. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>.
             </p>
 
@@ -147,6 +147,22 @@
             </p>
         <div class="media">
                 <a class="pull-left">
+                    <img class="media-object" src="./assets_files/mobile.png" width="96px" height="96px">
+                </a>
+                <div class="media-body">
+                    <p class="media-heading">
+                        <strong>
+                             ADC: Automated Deep Compression and Acceleration with Reinforcement Learning
+                     </strong><br>
+                        <strong>Yihui He</strong>, <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a>, <i>CVPR 2018 submission</i>
+                    </p>
+                    <p class="abstract-text">
+                        In this paper, we propose ADC:Automated Deep Compression that leverage reinforcement learning to efficiently sample the design space and greatly improve the model compression quality.
+                    </p>
+                </div>
+            </div>              
+        <div class="media">
+                <a class="pull-left">
                     <img class="media-object" src="./assets_files/ill-1.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
@@ -154,7 +170,7 @@
                         <strong>
                              Channel pruning for accelerating very deep neural networks
                      </strong><br>
-                        <strong>Yihui He</strong>, Xiangyu Zhang, Jian Sun, <i>ICCV 2017</i>
+                        <strong>Yihui He</strong>, Xiangyu Zhang, <a target="_blank" href="http://jiansun.org/">Jian Sun</a>, <i>ICCV 2017</i>
                         <a target="_blank"
                            href="http://openaccess.thecvf.com/content_iccv_2017/html/He_Channel_Pruning_for_ICCV_2017_paper.html">[PDF]</a>  
                         <a target="_blank"
