--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <p class="media-heading">
                         <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security
                             Surveillance</strong><br>
-                        Xiaobo Ma, <strong>Yihui He</strong>, Xiapu Luo, Jianfeng Li, Xiaohong Guan
+                        <strong>Yihui He*</strong>, Xiaobo Ma*, Xiapu Luo, Jianfeng Li, Xiaohong Guan
                         , <i>IEEE Intelligent System, Major Revision</i>
                         <a target="_blank"
                            href="http://arxiv.org/abs/1705.08508">[arXiv]</a>
