--- a/index.html
+++ b/index.html
@@ -187,7 +187,23 @@
                         In this paper, we introduce a new channel pruning method to accelerate very deep convolutional neural networks.Given a trained CNN model, we propose an iterative two-step algorithm to effectively prune each layer, by a LASSO regression based channel selection and least square reconstruction. We further generalize this algorithm to multi-layer and multi-branch cases. Our method reduces the accumulated error and enhance the compatibility with various architectures. Our pruned VGG-16 achieves the state-of-the-art results by 5x speed-up along with only 0.3% increase of error. More importantly, our method is able to accelerate modern networks like ResNet, Xception and suffers only 1.4%, 1.0% accuracy loss under 2x speed-up respectively, which is significant.
                     </p>
                 </div>
-            </div>      
+            </div>   
+        <div class="media">
+                <a class="pull-left">
+                    <img class="media-object" src="./assets_files/ill-1.png" width="96px" height="96px">
+                </a>
+                <div class="media-body">
+                    <p class="media-heading">
+                        <strong>
+                             Pruning Very Deep Neural Network Channels for Efficient Inference
+                     </strong><br>
+                        <strong>Yihui He</strong>, Xiangyu Zhang, <a target="_blank" href="http://jiansun.org/">Jian Sun</a>, <i>TPAMI</i>
+                    </p>
+                    <p class="abstract-text">
+                        Channel Pruning is further expanded to Filter Pruning with rich experiements.
+                    </p>
+                </div>
+            </div>
             <div class="media">
                 <a class="pull-left">
                     <img class="media-object" src="./assets_files/superres.png" width="96px" height="96px">
