--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
                         <strong>
                              Pruning Very Deep Neural Network Channels for Efficient Inference
                      </strong><br>
-                        <strong>Yihui He</strong>, Xiangyu Zhang, <a target="_blank" href="http://jiansun.org/">Jian Sun</a>, <i>TPAMI</i>
+                        <strong>Yihui He</strong>, Xiangyu Zhang, <a target="_blank" href="http://jiansun.org/">Jian Sun</a>
+                        , <i>TPAMI, Major Revision</i>
                     </p>
                     <p class="abstract-text">
                         Channel Pruning is further expanded to Filter Pruning with rich experiements.
