--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>   
         <div class="media">
                 <a class="pull-left">
-                    <img class="media-object" src="./assets_files/ill-1.png" width="96px" height="96px">
+                    <img class="media-object" src="./assets_files/filterwise.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
@@ -201,7 +201,7 @@
                         , <i>TPAMI, Major Revision</i>
                     </p>
                     <p class="abstract-text">
-                        Channel Pruning is further expanded to Filter Pruning with rich experiements.
+                        Channel Pruning is further expanded to Filterwise Pruning with rich experiements.
                     </p>
                 </div>
             </div>
