--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                   href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
                 grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
-                <p><strong>currently applying for Ph.D. Also looking for one-year research assistant position. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
+                <p><strong>Currently applying for Ph.D. Also open to one-year research position. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>.
             </p>
 
