--- a/index.html
+++ b/index.html
@@ -105,10 +105,8 @@
                 my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                Currently, I'm a visiting student at Johns Hopkins Univ. <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a> and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
-                I've interned at <a target="_blank" href="http://www.faceplusplus.com/">Megvii(Face++)</a> supervised by Xiangyu Zhang and <a target="_blank" href="http://jiansun.org/">Jian Sun</a> 
-                , and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a>. I studied at <a target="_blank"
-                                  href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
+                Currently, I'm a research assistant with <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a> at MIT.
+                I've interned at JHU supervised by Alan Yuille, Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>, and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a>. I studied at <a target="_blank" href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
                 grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
                 <p><strong>Currently applying for Ph.D. Also open to one-year research position. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
