--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
                              ADC: Automated Deep Compression and Acceleration with Reinforcement Learning
                      </strong><br>
                         <strong>Yihui He</strong>, <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a>, <i>CVPR 2018 submission</i>
+                         <a target="_blank"
+                           href="https://arxiv.org/abs/1802.03494">[arXiv]</a>  
                     </p>
                     <p class="abstract-text">
                         In this paper, we propose ADC:Automated Deep Compression that leverage reinforcement learning to efficiently sample the design space and greatly improve the model compression quality.
