--- a/index.html
+++ b/index.html
@@ -100,16 +100,13 @@
                 <img class="media-object" src="assets_files/me.png" width="96px" style="margin: 0px 10px">
             </a>
             <p>
-                I'm a Computer Science final year undergrad from <a
-                    href="https://en.wikipedia.org/wiki/Xi%27an_Jiaotong_University">Xi'an Jiaotong Univ.</a>, with
-                my interest focus on Computer Vision, Deep Learning and Network Security.
+                I'm a master student from Carnegie Megllon University, with my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                Currently, I'm a research assistant with <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a> at MIT.
-                I've interned at JHU supervised by Alan Yuille, Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>, and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a>. I studied at <a target="_blank" href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
-                grad school as an exchange student.</p>
+                Currently, I'm a research assistant with 
+                I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
-                <p><strong>Currently applying for Ph.D. Also open to one-year research position. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
+                <p><strong>Planning to pursue a Ph.D. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>.
             </p>
 
@@ -135,7 +132,7 @@
              *** Publications ***
             -->
             <h3>
-                <a name="publications"></a> Recent Publications
+                <a name="publications"></a> Publications
             </h3>
             <p>
                 Link to <a target="_blank"
@@ -150,14 +147,14 @@
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                             ADC: Automated Deep Compression and Acceleration with Reinforcement Learning
+                             AMC: AutoML for Model Compression and Acceleration on Mobile Devices
                      </strong><br>
-                        <strong>Yihui He</strong>, <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a>, <i>CVPR 2018 submission</i>
+                        <strong>Yihui He</strong>, Ji Lin, Zhijian Liu, Hanrui Wang, Li-Jia Li, <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a>, <i>ECCV 2018</i>
                          <a target="_blank"
                            href="https://arxiv.org/abs/1802.03494">[arXiv]</a>  
                     </p>
                     <p class="abstract-text">
-                        In this paper, we propose ADC:Automated Deep Compression that leverage reinforcement learning to efficiently sample the design space and greatly improve the model compression quality.
+                        In this paper, we propose AMC: AutoML for Model Compression that leverage reinforcement learning to efficiently sample the design space and greatly improve the model compression quality.
                     </p>
                 </div>
             </div>              
