--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Yihui He, CS undergrad interested in Computer vision & Deep Learning</title>
+    <title>Yihui He, CS master focused on Computer vision & Deep Learning</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Le styles -->
@@ -103,7 +103,6 @@
                 I'm a master student from Carnegie Megllon University, with my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                Currently, I'm a research assistant with 
                 I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
                 <p><strong>Planning to pursue a Ph.D. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
