--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="#projects">Projects</a>
     <!--<a href="#teaching">Teaching</a>-->
     <a target="_blank"
-       href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>
+       href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv-yihui.pdf">CV</a>
 </div>
 
 <body>
@@ -41,7 +41,7 @@
             <li><a href="#projects">Projects</a></li>
             <!--<li><a href="#teaching">Teaching</a></li>-->
             <li><a target="_blank"
-                   href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>
+                   href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv-yihui.pdf">CV</a>
             </li>
         </ul>
         <hr class="hidden-phone">
@@ -84,7 +84,7 @@
                 I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
                 <p><strong>Planning to pursue a Ph.D. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
-                            href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>.
+                            href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv-yihui.pdf">CV</a>.
             </p>
 
 
@@ -162,6 +162,38 @@
                     </p>
                 </div>
             </div>   
+                <div class="media">
+                <a class="pull-left">
+                    <img class="media-object" src="./assets_files/vehicle.png" width="96px" height="96px">
+                </a>
+                <div class="media-body">
+                    <p class="media-heading">
+                        <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security
+                            Surveillance</strong><br>
+                        Xiaobo Ma*, <strong>Yihui He*</strong>, Xiapu Luo, Jianfeng Li, Xiaohong Guan
+                        , <i>IEEE Intelligent System</i>
+                        <a target="_blank"
+                           href="https://ieeexplore.ieee.org/abstract/document/8354911/">[PDF]</a>
+                        <a target="_blank"
+                           href="http://arxiv.org/abs/1705.08508">[arXiv]</a>
+                        <a target="_blank"
+                           href="https://github.com/yihui-he/Vehicle-Traffic-Driven-Camera-Placement">[Code]</a>                        
+                    </p>
+                    <p class="abstract-text">
+                        Security surveillance is one of the most important issues in smart cities, especially in an era
+                        of
+                        terrorism. Deploying a number of (video) cameras is a
+                        common approach for surveillance information retrieval.
+                        Given the never-ending power offered by vehicles to a
+                        metropolis, exploiting vehicle traffic to design camera
+                        placement strategies could potentially facilitate physicalworld security surveillance. We take
+                        the first step towards
+                        exploring the linkage between vehicle traffic and camera
+                        placement in favor of physical-world security surveillance
+                        from a network perspective.
+                    </p>
+                </div>
+            </div>
         <div class="media">
                 <a class="pull-left">
                     <img class="media-object" src="./assets_files/filterwise.png" width="96px" height="96px">
@@ -210,36 +242,7 @@
                     </p>
                 </div>
             </div>        
-            <div class="media">
-                <a class="pull-left">
-                    <img class="media-object" src="./assets_files/vehicle.png" width="96px" height="96px">
-                </a>
-                <div class="media-body">
-                    <p class="media-heading">
-                        <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security
-                            Surveillance</strong><br>
-                        <strong>Yihui He*</strong>, Xiaobo Ma*, Xiapu Luo, Jianfeng Li, Xiaohong Guan
-                        , <i>IEEE Intelligent System, Major Revision</i>
-                        <a target="_blank"
-                           href="http://arxiv.org/abs/1705.08508">[arXiv]</a>
-                        <a target="_blank"
-                           href="https://github.com/yihui-he/Vehicle-Traffic-Driven-Camera-Placement">[Code]</a>                        
-                    </p>
-                    <p class="abstract-text">
-                        Security surveillance is one of the most important issues in smart cities, especially in an era
-                        of
-                        terrorism. Deploying a number of (video) cameras is a
-                        common approach for surveillance information retrieval.
-                        Given the never-ending power offered by vehicles to a
-                        metropolis, exploiting vehicle traffic to design camera
-                        placement strategies could potentially facilitate physicalworld security surveillance. We take
-                        the first step towards
-                        exploring the linkage between vehicle traffic and camera
-                        placement in favor of physical-world security surveillance
-                        from a network perspective.
-                    </p>
-                </div>
-            </div>
+
 
             <!--<div class="media">-->
             <!--<a class="pull-left" href="#top">-->
