--- a/index.html
+++ b/index.html
@@ -126,9 +126,12 @@
                         <strong>
                              AMC: AutoML for Model Compression and Acceleration on Mobile Devices
                      </strong><br>
-                        <strong>Yihui He</strong>, Ji Lin, Zhijian Liu, Hanrui Wang, Li-Jia Li, <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a>, <i>ECCV 2018</i>
+                        <strong>Yihui He</strong>, Ji Lin, Zhijian Liu, Hanrui Wang, Li-Jia Li, <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a>, <strong>ECCV 2018</strong>
+                        <a target="_blank"
+                           href="http://openaccess.thecvf.com/content_ECCV_2018/html/Yihui_He_AMC_Automated_Model_ECCV_2018_paper.html">[PDF]</a>  
                          <a target="_blank"
                            href="https://arxiv.org/abs/1802.03494">[arXiv]</a>  
+                        
                     </p>
                     <p class="abstract-text">
                         In this paper, we propose AMC: AutoML for Model Compression that leverage reinforcement learning to efficiently sample the design space and greatly improve the model compression quality.
@@ -144,7 +147,7 @@
                         <strong>
                              Channel pruning for accelerating very deep neural networks
                      </strong><br>
-                        <strong>Yihui He</strong>, Xiangyu Zhang, <a target="_blank" href="http://jiansun.org/">Jian Sun</a>, <i>ICCV 2017</i>
+                        <strong>Yihui He</strong>, Xiangyu Zhang, <a target="_blank" href="http://jiansun.org/">Jian Sun</a>, <strong>ICCV 2017</strong>
                         <a target="_blank"
                            href="http://openaccess.thecvf.com/content_iccv_2017/html/He_Channel_Pruning_for_ICCV_2017_paper.html">[PDF]</a>  
                         <a target="_blank"
@@ -171,7 +174,7 @@
                         <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security
                             Surveillance</strong><br>
                         Xiaobo Ma*, <strong>Yihui He*</strong>, Xiapu Luo, Jianfeng Li, Xiaohong Guan
-                        , <i>IEEE Intelligent System</i>
+                        , <strong>IEEE Intelligent System</strong>
                         <a target="_blank"
                            href="https://ieeexplore.ieee.org/abstract/document/8354911/">[PDF]</a>
                         <a target="_blank"
