--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Yihui He, CS master focused on Computer vision & Deep Learning</title>
+    <title>Yihui He, CMU grad student focused on Computer vision & Deep Learning</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Le styles -->
@@ -78,7 +78,7 @@
                 <img class="media-object" src="assets_files/me.png" width="96px" style="margin: 0px 10px">
             </a>
             <p>
-                I'm a master student from Carnegie Megllon University, with my interest focus on Computer Vision, Deep Learning and Network Security.
+                I'm a CMU grad student, with my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
                 I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
@@ -286,7 +286,7 @@
                             An Empirical Analysis of Approximation Algorithms for the Euclidean Traveling Salesman Problem
                         </strong>
                         <a target="_blank"
-                           href="https://arxiv.org/abs/1705.09058">[arXiv]</a>
+                           href="https://arxiv.org/pdf/1705.09058.pdf">[PDF]</a>
                         <a target="_blank"
                            href="https://github.com/yihui-he/TSP">[Code]</a>
                     </p>
@@ -310,7 +310,7 @@ cities in the United States, and a synthetic dataset consisting of 200 cities to
                             Estimated Depth Map Helps Image Classification
                         </strong>
                         <a target="_blank"
-                           href="https://arxiv.org/abs/1709.07077">[arXiv]</a>
+                           href="https://arxiv.org/pdf/1709.07077.pdf">[PDF]</a>
                         <a target="_blank" href="https://github.com/yihui-he/Estimated-Depth-Map-Helps-Image-Classification">[Code]</a>
                         <a target="_blank"
                            href="http://nbviewer.jupyter.org/github/yihui-he/Estimated-Depth-Map-Helps-Image-Classification/blob/master/presentation/depth.pdf">[Slides]</a>
