--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 I'm a CMU grad student, with my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
+                During my undergrad study I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
                 <p><strong>Planning to pursue a Ph.D. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/cv-yihui/blob/master/cv_yihui.pdf">CV</a>.
