--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p>
                 During my undergrad study I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
         <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
-                <p><strong>Planning to pursue a Ph.D. If you're interested, don’t hesitate to contact me.</strong> Here's my <a target="_blank"
+                <p><strong>Looking for 2019 summer internship. </strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/cv-yihui/blob/master/cv_yihui.pdf">CV</a>.
             </p>
 
