--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
                 I'm a CMU grad student, with my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                During my undergrad study I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I studied at UCSB grad school as an exchange student.</p>
-        <p>I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
+                During my undergrad study I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
+        <p> I have a track record of contributing to CNN efficient inference. 
+            I designed <a href="#cp">channel pruning</a> to effectively prune channels. 
+            I further proposed <a href="#AMC">AMC</a>, 
+            which employed reinforcement learning to efficiently sample the design space and greatly improved the model compression quality.</p>
                 <p><strong>Looking for 2019 summer internship. </strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/cv-yihui/blob/master/cv_yihui.pdf">CV</a>.
             </p>
@@ -118,7 +121,7 @@
                 <!--<a href="projects.html"> [Unpublished Projects]</a>-->
             </p>
         <div class="media">
-                <a class="pull-left">
+                <a name="AMC" class="pull-left">
                     <img class="media-object" src="./assets_files/mobile.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
@@ -139,7 +142,7 @@
                 </div>
             </div>              
         <div class="media">
-                <a class="pull-left">
+                <a name="cp" class="pull-left">
                     <img class="media-object" src="./assets_files/ill-1.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
